syntax = "proto3";
import "google/api/annotations.proto";
package prospects;
option go_package = ".;prospects";

message Error {
	string error = 1;
	string message = 2;
}

message FilterField {
	string type = 1;
	string value = 2;
}

message Filter {
	
	FilterField id = 1;
	FilterField name = 2;
	FilterField email = 3;
	FilterField status = 4;
	FilterField userId = 5;
	FilterField phone = 6;
}

message Prospects {
	
	string id = 1;
	string name = 2;
	string email = 3;
	string status = 4;
	string userId = 5;
	string phone = 6;
}

message GetSingleProspectsRequest{
	Filter filter = 1;
}
  
message GetSingleProspectsResponse {
	Prospects data = 1;
	bool success = 2;
	Error error = 3;
}

message GetMultipleProspectsRequest {
	repeated string ids = 1;
	Filter filter = 2;
}
  
message GetMultipleProspectsResponse {
	repeated Prospects data = 1;
	bool success = 2;
	Error error = 3;
}

message CreateSingleProspectsRequest {
	Prospects data = 1;
}

message CreateSingleProspectsResponse {
	string id = 1;
	bool success = 2;
	Error error = 3;
}

message CreateMultipleProspectsRequest {
	repeated Prospects data = 1;
}

message CreateMultipleProspectsResponse {
	repeated string ids = 1;
	bool success = 2;
	Error error = 3;
}

message UpdateSingleProspectsRequest {
	Filter filter = 1;
	Prospects data = 2;
}

message UpdateSingleProspectsResponse {
	bool success = 1;
	Error error = 2;
}

message UpdateMultipleProspectsRequest {
	repeated string ids = 1;
	Filter filter = 2;
	Prospects data = 3;
}

message UpdateMultipleProspectsResponse {
	bool success = 1;
	Error error = 2;
}

message DeleteSingleProspectsRequest{
	string id = 1;
	Filter filter = 2;
}

message DeleteSingleProspectsResponse{
	bool success = 1;
	Error error = 2;
}

message DeleteMultipleProspectsRequest{
	repeated string ids = 1;
	Filter filter = 2;
}

message DeleteMultipleProspectsResponse{
	bool success = 1;
	Error error = 2;
}

service prospectsService {
	rpc GetSingleProspects(GetSingleProspectsRequest) returns (GetSingleProspectsResponse) {
		option (google.api.http) = {
			post: "/v1/prospects/get"
			body: "*"
		};
	}
	rpc GetMultipleProspects(GetMultipleProspectsRequest) returns (GetMultipleProspectsResponse) {
		option (google.api.http) = {
			post: "/v1/prospects/getMultiple"
			body: "*"
		};
	}
	rpc CreateSingleProspects(CreateSingleProspectsRequest) returns (CreateSingleProspectsResponse) {
		option (google.api.http) = {
			post: "/v1/prospects/create"
			body: "*"
		};
	}
	rpc CreateMultipleProspects(CreateMultipleProspectsRequest) returns (CreateMultipleProspectsResponse) {
		option (google.api.http) = {
			post: "/v1/prospects/createMultiple"
			body: "*"
		};
	}
	rpc UpdateSingleProspects(UpdateSingleProspectsRequest) returns (UpdateSingleProspectsResponse) {
		option (google.api.http) = {
			post: "/v1/prospects/update"
			body: "*"
		};
	}
	rpc UpdateMultipleProspects(UpdateMultipleProspectsRequest) returns (UpdateMultipleProspectsResponse) {
		option (google.api.http) = {
			post: "/v1/prospects/updateMultiple"
			body: "*"
		};
	}
	rpc DeleteSingleProspects(DeleteSingleProspectsRequest) returns (DeleteSingleProspectsResponse) {
		option (google.api.http) = {
			post: "/v1/prospects/delete"
			body: "*"
		};
	}
	rpc DeleteMultipleProspects(DeleteMultipleProspectsRequest) returns (DeleteMultipleProspectsResponse) {
		option (google.api.http) = {
			post: "/v1/prospects/deleteMultiple"
			body: "*"
		};
	}
}
